# openclaw-btc-price-oracle

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  go-announcer.sh  install.sh  pyproject.toml
skills/precop_btc_price_announcer/: __init__.py  binohash.py  config.py  logic.py  manifest.yaml  multi_rpc_provider.py  telegram.py  utxoracle.py  utxoracle_engine.py
src/: announcer_wrapper.py
tests/: __init__.py  test_binohash.py  test_config.py  test_skill_lifecycle.py  test_utxoracle_engine.py  test_wrapper.py
