[project]
name = "precop-openclaw-btc-price-oracle"
version = "0.1.2"
description = "Native UTXOracle v9.1 Thermodynamic Extraction for PRECOP"
authors = [
    { name = "BitcoinWorldTrustFoundation", email = "contact@bitcoinworldtrust.org" }
]
dependencies = [
    "httpx>=0.27.0",
    "asyncio>=3.4.3",
    "tenacity>=8.4.1"
]
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0"
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
